# dienen_gazebo_sim

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-and-test.yml  deploy-debian-nightly.yml  deploy-debian-stable.yml  deploy-debian.yml  ros2-ci.yml  ros_2_ci.yml
include/dienen_sim/: movement_plugin.hpp
launch/: bringup.launch.py  bringup_launch.py
meshes/: body.stl  wheel.stl
models/dienen/: model.sdf
models/dienen/meshes/: base.dae  wheel.dae
models/dienen_human/: model.config  model.sdf
models/dienen_human/collisions/: right_gripper_collision.dae
models/dienen_human/meshes/: head.dae  left_foot.dae  left_hand.dae  left_lower_arm.dae  left_lower_leg.dae  left_upper_arm.dae  left_upper_leg.dae  neck.dae  right_foot.dae  right_hand.dae  right_lower_arm.dae  right_lower_leg.dae  right_upper_arm.dae  right_upper_leg.dae  torso.dae
models/dienen_robot/: model.config  model.sdf
models/dienen_robot/collisions/: camera_collision.dae  depth_camera_collision.dae  head_collision.dae  left_gripper_collision.dae  left_lower_arm_collision.dae  left_shoulder_collision.dae  left_upper_arm_collision.dae  lower_body_collision.dae  neck_collision.dae  right_lower_arm_collision.dae  right_shoulder_collision.dae  right_upper_arm_collision.dae  upper_body_collision.dae
models/dienen_robot/meshes/: camera.dae  depth_camera.dae  head.dae  left_gripper.dae  left_lower_arm.dae  left_shoulder.dae  left_upper_arm.dae  lower_body.dae  neck.dae  right_gripper.dae  right_lower_arm.dae  right_shoulder.dae  right_upper_arm.dae  upper_body.dae
models/dienen_sim/box/: model.config  model.sdf
models/dienen_sim/box/meshes/: box.dae
models/dienen_sim/dienen/: model.config  model.sdf
models/dienen_sim/dienen/meshes/: base.dae  head.dae  left_gripper.dae  left_lower_arm.dae  lower_body.dae  neck.dae  right_shoulder.dae  upper_body.dae
models/dienen_sim/floor/: model.config  model.sdf
models/dienen_sim/sun/: model.config  model.sdf
models/floor/: model.sdf
models/sun/: model.config
src/dienen_sim/: movement_plugin.cpp
worlds/: cafe.world  default.sdf  default.world  garage.world  playground.world
